# GoL

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Menu.cpp  Menu.h  README.md  main.cpp
Client/: CMakeLists.txt  Connection.cpp  Connection.h  Game.cpp  Game.h  Menu.cpp  main.cpp  pThread.h  rThread.h
Final/: makefile
Final/Client/: Connection.cpp  Game.h  Menu.cpp  Menu.h  main.cpp  rThread.h
Final/Server/: Connection.h  Game.cpp  Game.h  ServerStorage.cpp  connectionHandlerThread.h
GoL/: CMakeLists.txt  Game.cpp  Game.h  Menu.cpp  main.cpp
Server/: CMakeLists.txt  Clients.cpp  Clients.h  Connection.cpp  Connection.h  Game.cpp  Game.h  ServerStorage.cpp  ServerStorage.h  connectionHandlerThread.h  main.cpp  processingThread.h  readClientInputThread.h
structures/: ArrayMatrix.h  array.h  matrix.h  structure.cpp  structure.h  vector.cpp  vector.h
